<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.d3ifcool.rememberactivities.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:id="@+id/relativ">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/remember_activities"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="199dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:drawableStart="@mipmap/ic_email"
                android:hint="@string/email"
                android:inputType="text"
                android:textColorLink="@color/colorPrimary"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:drawableStart="@mipmap/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorLink="@color/colorPrimary"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativ"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:text="@string/masuk"
        android:textColor="#ffff" />
    <ProgressBar
        android:id="@+id/pbar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/masuk"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/masuk"
        android:layout_centerHorizontal="true"
        android:text="@string/masuk_dengan_akun_google" />

    <TextView
        android:id="@+id/klik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/klik_di_sini"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>
